--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -57,6 +57,9 @@
 			<trans-unit id="tx_fpnewsletter_domain_model_log.status.2">
 				<target>angemeldet, bestätigt</target>
 			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.6">
+				<target>schon angemeldet</target>
+			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.status.7">
 				<target>abgemeldet</target>
 			</trans-unit>
