--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -63,6 +63,9 @@
 			<trans-unit id="email_send1">
 				<source>An email has been send to you. Please verify your email-address for the newsletter subscription.</source>
 			</trans-unit>
+			<trans-unit id="email_send2">
+				<source>An email has been send to you. Please verify your email-address for the newsletter unsubscription.</source>
+			</trans-unit>
 			<trans-unit id="email_verified">
 				<source>Your email-address is now verfied. You are now subscribed to our newsletter.</source>
 			</trans-unit>
