--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -57,6 +57,12 @@
 			<trans-unit id="tx_fpnewsletter_domain_model_log.status.2">
 				<source>subscribed, verified</source>
 			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.3">
+				<source>unsubscribed, waiting for verify</source>
+			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.status.4">
+				<source>unsubscribed, verified</source>
+			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.status.6">
 				<source>already subscribed</source>
 			</trans-unit>
