--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -48,6 +48,27 @@
 			<trans-unit id="gdprUid">
 				<target>Seite mit den Datenschutzbestimmungen</target>
 			</trans-unit>
+			<trans-unit id="enables">
+				<target>Ein- / Ausschalten</target>
+			</trans-unit>
+			<trans-unit id="settings.no">
+				<target>nein</target>
+			</trans-unit>
+			<trans-unit id="settings.yes">
+				<target>ja</target>
+			</trans-unit>
+			<trans-unit id="settings.doubleOptOut">
+				<target>Double-opt-out-Abmeldung einschalten?</target>
+			</trans-unit>
+			<trans-unit id="settings.enableUnsubscribeForm">
+				<target>Abmeldeformular auch unter dem Anmeldeformular anzeigen?</target>
+			</trans-unit>
+			<trans-unit id="settings.enableUnsubscribeGdprAsHidden">
+				<target>Die DSGVO-Checkbox auf der Abmeldeseite verbergen?</target>
+			</trans-unit>
+			<trans-unit id="settings.module_sys_dmail_html">
+				<target>Newsletter im HTML-Format abonnieren?</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
