--- a/Resources/Private/Language/de.locallang_csh_tx_fpnewsletter_domain_model_log.xlf
+++ b/Resources/Private/Language/de.locallang_csh_tx_fpnewsletter_domain_model_log.xlf
@@ -7,7 +7,7 @@
 				<target>Newsletter-Abonnenten-Managment</target>
 			</trans-unit>
 			<trans-unit id="tx_fp_newsletter_domain_model_pi1.description">
-				<target>Plugin für Newsletter An- und Abmeldung. Tabelle: tt_address. Ein Log wird erstellt.</target>
+				<target>Datenschutzkonformes Plugin für direct_mail An- und Abmeldungen via tt_address.</target>
 			</trans-unit>
 			<trans-unit id="gender.description">
 				<target>Anrede</target>
