--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -63,6 +63,9 @@
 			<trans-unit id="email_verified">
 				<source>Your email-address is now verfied. You are now subscribed to our newsletter.</source>
 			</trans-unit>
+			<trans-unit id="email_verified2">
+				<source>Your email-address is now verfied. You are now unsubscribed from our newsletter.</source>
+			</trans-unit>
 			<trans-unit id="email_removed">
 				<source>You have unsubscribed our newsletter successfully.</source>
 			</trans-unit>
