--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -63,6 +63,9 @@
 			<trans-unit id="email_verified">
 				<target>Ihre E-Mail-Adresse ist nun verifiziert. Sie sind nun zu unserem Newsletter angemeldet!</target>
 			</trans-unit>
+			<trans-unit id="email_verified2">
+				<target>Ihre E-Mail-Adresse ist nun verifiziert. Sie sind nun von unserem Newsletter abgemeldet!</target>
+			</trans-unit>
 			<trans-unit id="email_removed">
 				<target>Sie haben sich erfolgreich aus unserem Newsletter ausgetragen.</target>
 			</trans-unit>
