--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -57,6 +57,9 @@
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mr">
 				<source>Mr.</source>
 			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.divers">
+				<source>Divers</source>
+			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.status.0">
 				<source>unknown</source>
 			</trans-unit>
