--- a/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
@@ -30,6 +30,9 @@
 			<trans-unit id="securityhash.description">
 				<source>Security-Hash</source>
 			</trans-unit>
+			<trans-unit id="retoken.description">
+				<source>reCaptcha-token</source>
+			</trans-unit>
 			<trans-unit id="gdpr.description">
 				<source>GDPR checkbox</source>
 			</trans-unit>
