--- a/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_fpnewsletter_domain_model_log.xlf
@@ -33,6 +33,9 @@
 			<trans-unit id="retoken.description">
 				<source>reCaptcha-token</source>
 			</trans-unit>
+			<trans-unit id="mathcaptcha.description">
+				<source>Mathematical captcha</source>
+			</trans-unit>
 			<trans-unit id="gdpr.description">
 				<source>GDPR checkbox</source>
 			</trans-unit>
