--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -36,6 +36,9 @@
 			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken">
 				<target>reCaptcha-token</target>
 			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha">
+				<target>Math. Captcha</target>
+			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr">
 				<target>Datenschutz</target>
 			</trans-unit>
