--- a/Resources/Private/Language/de.locallang_csh_tx_fpnewsletter_domain_model_log.xlf
+++ b/Resources/Private/Language/de.locallang_csh_tx_fpnewsletter_domain_model_log.xlf
@@ -33,6 +33,9 @@
 			<trans-unit id="retoken.description">
 				<target>reCaptcha-token</target>
 			</trans-unit>
+			<trans-unit id="mathcaptcha.description">
+				<target>Math. Captcha</target>
+			</trans-unit>
 			<trans-unit id="gdpr.description">
 				<target>DSGVO-Checkbox</target>
 			</trans-unit>
