--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -51,6 +51,9 @@
 			<trans-unit id="tx_fpnewsletter_domain_model_log.retoken">
 				<target>reCaptcha-token</target>
 			</trans-unit>
+			<trans-unit id="tx_fpnewsletter_domain_model_log.mathcaptcha">
+				<target>Math. Captcha</target>
+			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gdpr">
 				<target>DSGVO</target>
 			</trans-unit>
